Update README with docs link

--- a/README.adoc
+++ b/README.adoc
@@ -1,1 +1,14 @@
-# tcp
+# TCP Source, Processor and Sink
+
+To learn more about this application and the supported properties, please review the following link.
+
+## TCP Sources
+include::spring-cloud-starter-stream-source-tcp/README.adoc[]
+
+include::spring-cloud-starter-stream-source-tcp-client/README.adoc[]
+
+## TCP Processor
+include::spring-cloud-starter-stream-processor-tcp-client/README.adoc[]
+
+## TCP Sink
+include::spring-cloud-starter-stream-sink-tcp/README.adoc[]
