--- a/spring-cloud-starter-stream-source-tcp-client/README.adoc
+++ b/spring-cloud-starter-stream-source-tcp-client/README.adoc
@@ -1,6 +1,20 @@
 //tag::ref-doc[]
 = TCP Client as a Source which connects to a TCP server and receives data
 
+== Input
+
+N/A 
+
+== Output
+
+==== Headers:
+
+* `Content-Type: application/octet-stream`
+
+==== Payload:
+
+* `byte[]`
+
 == Options
 
 The **$$tcp-client$$** $$source$$ has the following options:
@@ -23,5 +37,16 @@ $$tcp.use-direct-buffers$$:: $$<documentation missing>$$ *($$Boolean$$, default:
 == Build
 
 ```
-$ mvn clean package
+$ ./mvnw clean install -PgenerateApps
+$ cd apps
+```
+You can find the corresponding binder based projects here. You can then cd into one one of the folders and build it:
+```
+$ ./mvnw clean package
+```
+
+== Examples
+
+```
+java -jar tcp_client_source.jar --decoder=LF
 ```
