--- a/spring-cloud-starter-stream-source-tcp/README.adoc
+++ b/spring-cloud-starter-stream-source-tcp/README.adoc
@@ -64,7 +64,7 @@ $ ./mvnw clean package
 == Examples
 
 ```
-java -jar tcp_source.jar --decoder=LF
+java -jar tcp_source.jar --tcp.decoder=LF
 ```
 
 The "decoder" property determines the message format (default is termination with CRLF).
