--- a/spring-cloud-starter-stream-source-tcp-client/README.adoc
+++ b/spring-cloud-starter-stream-source-tcp-client/README.adoc
@@ -48,5 +48,5 @@ $ ./mvnw clean package
 == Examples
 
 ```
-java -jar tcp_client_source.jar --decoder=LF
+java -jar tcp_client_source.jar --tcp.decoder=LF
 ```
