Update TCP to SpringBoot/SpringCloud 2.0.x
 - set default output content-type in post-processors
 - replace config. properties inheritance by composition
 - Resolves missing documentation generation

Resolves #4

--- a/spring-cloud-starter-stream-sink-tcp/README.adoc
+++ b/spring-cloud-starter-stream-sink-tcp/README.adoc
@@ -10,7 +10,7 @@ available, the default being 'CRLF'.
 
 ==== Headers:
 
-* `Content-Type: application/octet-stream` 
+* `Content-Type: application/octet-stream`
 
 ==== Payload:
 
@@ -18,7 +18,7 @@ available, the default being 'CRLF'.
 
 ==== Headers:
 
-* `Content-Type: text/plain` 
+* `Content-Type: text/plain`
 
 ==== Payload:
 
@@ -37,11 +37,12 @@ $$tcp.charset$$:: $$The charset used when converting from bytes to String.$$ *($
 $$tcp.close$$:: $$Whether to close the socket after each message.$$ *($$Boolean$$, default: `$$false$$`)*
 $$tcp.encoder$$:: $$The encoder to use when sending messages.$$ *($$Encoding$$, default: `$$<none>$$`, possible values: `CRLF`,`LF`,`NULL`,`STXETX`,`RAW`,`L1`,`L2`,`L4`)*
 $$tcp.host$$:: $$The host to which this sink will connect.$$ *($$String$$, default: `$$<none>$$`)*
-$$tcp.nio$$:: $$<documentation missing>$$ *($$Boolean$$, default: `$$<none>$$`)*
-$$tcp.port$$:: $$<documentation missing>$$ *($$Integer$$, default: `$$<none>$$`)*
-$$tcp.reverse-lookup$$:: $$<documentation missing>$$ *($$Boolean$$, default: `$$<none>$$`)*
-$$tcp.socket-timeout$$:: $$<documentation missing>$$ *($$Integer$$, default: `$$<none>$$`)*
-$$tcp.use-direct-buffers$$:: $$<documentation missing>$$ *($$Boolean$$, default: `$$<none>$$`)*
+$$tcp.nio$$:: $$Whether or not to use NIO.$$ *($$Boolean$$, default: `$$false$$`)*
+$$tcp.port$$:: $$The port on which to listen; 0 for the OS to choose a port.$$ *($$Integer$$, default: `$$1234$$`)*
+$$tcp.reverse-lookup$$:: $$Perform a reverse DNS lookup on the remote IP Address; if false,
+ just the IP address is included in the message headers.$$ *($$Boolean$$, default: `$$false$$`)*
+$$tcp.socket-timeout$$:: $$The timeout (ms) before closing the socket when no data is received.$$ *($$Integer$$, default: `$$120000$$`)*
+$$tcp.use-direct-buffers$$:: $$Whether or not to use direct buffers.$$ *($$Boolean$$, default: `$$false$$`)*
 //end::configuration-properties[]
 
 == Available Encoders
